# neatutils

./: LICENSE  README.md  README.rst  pyproject.toml
neatutils/: __init__.py  neatutils.py
tests/: test_neatutils.py
