[tool.poetry]
name = "neatutils"
version = "0.0.1"
description = "NeatUtils - a simple reference utility for awesome lists and machine learning estimators and algorithms"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/neatutils"
repository = "https://github.com/Jcharis/neatutils"
keywords = ["neatutils","awesome list","machine learning estimators","ml algorithms list", "sklearn estimators","neat","jcharis","list pycaret estimators","distutils"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.3"
click = "^7.1.2"
click-help-colors = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
